# obs-gamecapture

./: CMakeLists.txt  README.md
game-capture/: CMakeLists.txt  Main.cpp
game-capture/cuda/: fewgweg.cpp  similarImage.cu  test.cu  test.h
game-capture/src/: Capture.h  Capture.rc  CommonTypes.h  DesktopCapture.cpp  DesktopCapture.h  DibHelper.cpp  GameCapture.cpp  GameCapture.h  IBeboCapture.h  IBeboCapture_h.h  IBeboCapture_i.c  Logging.cpp  Main.h  load-graphics-offsets.c
game-capture/third-part/g2log/: g2logworker.cpp
game-capture/third-part/ipc-util/ipc-util/: pipe-windows.h
game-capture/third-part/util/: CMakeLists.txt  graphics-hook-info.h  nt-stuff.h  threading.h  window-helpers.h
mouse/: CMakeLists.txt  main.cpp  main.h
yolov5/: CMakeLists.txt  yolov5_det.cpp
yolov5/plugin/: yololayer.h
yolov5/src/: config.h  d3d9Convert.cpp  det_dll_export.h  model.cpp  postprocess.cpp  postprocess.h  preprocess.cu  preprocess.h
